--- a/public/template/assets/css/main.css
+++ b/public/template/assets/css/main.css
@@ -247,7 +247,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Desktop Navigation 
+# Desktop Navigation
 --------------------------------------------------------------*/
 @media (min-width: 1280px) {
   .navbar {
@@ -794,7 +794,7 @@ section {
 .hero-fullscreen {
   width: 100%;
   min-height: 100vh;
-  background: url("../img/hero-fullscreen-bg.jpg") center center;
+  background: url("../img/hero-fullscreen-bg.jpeg") center center;
   background-size: cover;
   position: relative;
   padding: 120px 0 60px;
